Tue Oct 20 09:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Tue Oct 18 09:23:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

                * bin/MakeProjectCreator/config/global.features:
                Add ccm_direct_collocation

        Wed Oct 12 13:08:13 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * bin/MakeProjectCreator/config/crosscompile.mpb:
                  Fixed install issues.

                * bin/mwc.pl:
                  Removed unnecessary STDERR.

        === end changelog ===

Thu Oct 20 06:57:38 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.*:
          Removed autoconf support due to lack of resources/funding to
          get autoconf really working. It now only causes confusions and
          not working configurations for users.

Wed Oct 19 19:13:38 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:
          disable openmp by default.

        * include/makeinclude/platform_clang_common.GNU:
        * include/makeinclude/platform_g++_common.GNU:
          add flags for openmp.

Wed Oct 19 09:56:20 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Removed not needed setting of inline

Mon Oct 17 20:40:35 UTC 2011  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iOS.GNU:

          Minor enhancements to this file to make ACE/TAO compile again.

Sat Oct 15 00:57:11 UTC 2011  Abdullah Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-lion.h:
        * include/makeinclude/platform_macosx_lion.GNU:

          Minor enhancements to the files above.

Mon Oct 10 12:13:52 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/INet/ClientRequestHandler.h:
        * protocols/ace/INet/HTTP_ClientRequestHandler.h: