@@ -509,6 +509,18 @@ the links below to download it.
     <A HREF="http://www.dre.vanderbilt.edu/support.html">several companies</A>.
   <LI>RPMs for CentOS, Fedora, Mandriva, RHEL, SLE, and OpenSuSE are available from the
     <A HREF="http://software.opensuse.org/search">Open Build Service</A>.
+      <UL>
+	<LI>Latest micro release
+	  <A HREF="http://download.opensuse.org/repositories/devel:/libraries:/ACE:/micro/">http://download.opensuse.org/repositories/devel:/libraries:/ACE:/micro/</A>
+	<LI>Latest micro release with versioned namespaces
+	  <A HREF="http://download.opensuse.org/repositories/devel:/libraries:/ACE:/micro:/versioned/">http://download.opensuse.org/repositories/devel:/libraries:/ACE:/micro:/versioned/</A>
+	<LI>Latest bug fix only release
+	  <A HREF="http://download.opensuse.org/repositories/devel:/libraries:/ACE:/bugfixonly/">http://download.opensuse.org/repositories/devel:/libraries:/ACE:/bugfixonly/</A>
+	<LI>Latest minor release
+	  <A HREF="http://download.opensuse.org/repositories/devel:/libraries:/ACE:/minor/">http://download.opensuse.org/repositories/devel:/libraries:/ACE:/minor/</A>
+	<LI>Latest major release
+	  <A HREF="http://download.opensuse.org/repositories/devel:/libraries:/ACE:/major/">http://download.opensuse.org/repositories/devel:/libraries:/ACE:/major/</A>
+      </UL>
   <LI> Ken Sedgwick's <A HREF="http://dist.bonsai.com/ken/ace_tao_rpm/">Fedora
       RPMs</A> for ACE and TAO.
 </UL><P>
