@@ -1,3 +1,9 @@
+Thu Oct 20 10:41:44 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/Download.html:
+          Added links to the OBS projects, thanks to John Fletcher for providing
+          this update
+
 Tue Oct 20 09:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         Merged changes from Remedy work branch.
